加上GC日志